--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@800&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Tweets | Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
